@@ -4,48 +4,56 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 public class Service {
 
     static LocalDateTime dateTimeNow = LocalDateTime.now();
 
-    static void outputTestSet() {
-        //вывод в консоль результатов обработки тестового набора перелётов
-        FlightBuilder.createFlights()
-                .forEach(System.out::println);
+    //получаем список результатов обработки тестового набора перелётов
+    static List<Flight> outputTestSet() {
+       return FlightBuilder.createFlights()
+                .stream().toList();
     }
 
-    static List<Flight> outputFlightWhereDepartureToTheCurrentPointInTime() {
-        return FlightBuilder.createFlights().stream()
+    //выводим  список, в котором вылет до текущего момента времени
+    static List<Flight> outputFlightWhereDepartureToTheCurrentPointInTime(List<Flight>allFls) {
+        return allFls.stream()
                 .filter(flight -> flight.getSegments().stream()
                         .allMatch(segment -> segment.getDepartureDate()
                                 .isBefore(dateTimeNow)))
                 .collect(Collectors.toList());
     }
 
-    static List<Flight> outputFlightWhereArrivalDateBeforeDepartureDate() {
-        return FlightBuilder.createFlights().stream()
+    //выводим список, в котором сегменты с датой прилёта раньше даты вылета
+    static List<Flight> outputFlightWhereArrivalDateBeforeDepartureDate(List<Flight>allFls) {
+        return allFls.stream()
                 .filter(flight -> flight.getSegments().stream()
                         .allMatch(segment -> segment.getArrivalDate()
                                 .isBefore(segment.getDepartureDate())))
                 .collect(Collectors.toList());
     }
 
-//    static List<Flight> outputFlightWhereTotalTimeSpentOnEarthExceedsTwoHours() {
-//      List<Flight> twoHoursAtEarth = FlightBuilder.createFlights().stream()
-//              .filter(flight -> flight.getSegments().size()>=2).toList();
-//
-//       List<Segment>segments = twoHoursAtEarth.stream().filter(flight -> flight.getSegments().stream()
-//                       .allMatch(segment -> segment.getArrivalDate().plusHours(2).isAfter(segment.getDepartureDate())))
-//               .
-//
-//
-//       return FlightBuilder.createFlights().stream()
-//                .filter(flight -> flight.getSegments().stream()
-//                        .anyMatch(segment -> segment.getArrivalDate().plusHours(2)
-//                                .isAfter(segment.getDepartureDate())))
-//               .collect(Collectors.toList());
-//    }
+
+    //выводим список, перелетов, где общее время, проведённое на земле, превышает два часа
+    static List<Flight> outputFlightWhereTotalTimeSpentOnEarthExceedsTwoHours(List<Flight>allFls) {
+        List<Flight> twoHoursAtEarth = new ArrayList<>();
+        for(allFls.listIterator().forEachRemaining(Flight::getSegments)) {
+//            List<Segment> seg = flight.getSegments();
+        List<Segment>seg = allFls.stream()
+                .map(flight -> flight.getSegments().stream()).toList();
+            for (int i = 0; i < seg.size()-1; i++) {
+                LocalDateTime arrivalDateTime = seg.get(i).getArrivalDate();
+                LocalDateTime departureDateTime=seg.get(i+1).getDepartureDate();
+                if(departureDateTime.isAfter(arrivalDateTime.plusHours(2))){
+                    twoHoursAtEarth.add(flight );
+                }
+            }
+//        }
+
+        return twoHoursAtEarth;
+    }
+
 
 }
